<resources>
    <string name="app_name">LifeCycle</string>
    <string name="greeting">Welcome back</string>
    <string name="login">Login</string>
    <string name="homePage">Welcome Home</string>
    <string name="register">Register</string>
    <string name="lifecycle">LifeCycle</string>
    <string name="loginButton">Login</string>
    <string name="email">Email</string>
    <string name="enterPasswordRegister">Enter Password</string>
    <string name="reenterPasswordRegister">Re-enter Password</string>
    <string name="registerButton">Register</string>
    <string name="passwordField">Password</string>
    <string name="emailOrUsername">Email or Username</string>
</resources>